# antenna

./: .env-sample  .gitignore  Makefile  README.md  antenna.py  pyproject.toml  requirements.txt  rss_utils.py  task_sample.json  url_sample.json  url_sample.txt
.github/workflows/: build-and-lint.yml
antenna/: __main__.py  rss_utils.py
