[tool.poetry]
name = "antenna"
version = "0.1.0"
description = ""
authors = ["minaminao <minaminaoy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
deepl = "^1.18.0"
python-dotenv = "^1.0.1"
feedparser = "^6.0.11"
beautifulsoup4 = "^4.12.3"

[tool.poetry.scripts]
antenna = "antenna.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
